--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <header>
         <h1>Jiaqi Zou</h1>
         <p>PhD of Information and Communication Engineering<br>Beijing University of Posts and Telecommunications</p>
-        <p>Visiting Researcher <br>Univerisy College Londor</p>
+        <p>Visiting Researcher <br>Univerisy College London</p>
     <h3><a href="https://jiaqizou417.github.io/">Home</a></h3>
         <h3><a href="https://jiaqizou417.github.io/research.html">Research</a></h3>
     <h3><a href="https://jiaqizou417.github.io/research/CV.pdf">CV</a></h3>  
