--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </header>
       <section>
       <img src="jiaqi.jpg" height="250" width="250" alt="Jiaqi Zou"></h3>
-      <p>I am currently an phD of <a href="http://www.ou.edu/cas/economics">Economics</a> at the <a href="http://www.ou.edu/">Beijing University of Posts and Telecommunications</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
+      <p>I am currently an phD of <a href="http://www.ou.edu/cas/economics">Information and Communication Engineering</a> at the <a href="http://www.ou.edu/">Beijing University of Posts and Telecommunications</a> and Visiting Researcher at the <a href="https://www.iza.org/">Univerisy College London</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
       <p>My research interests include wireless communications, integrated sensing and communications and applications of machine learning.</p>
       </section>
     </div>
