--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Jiaqi Zou by jiaqizou</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -83,7 +83,7 @@
     <div class="wrapper">
       <header>
         <h1>Jiaqi Zou</h1>
-        <p>PhD of Information and Communication Engineering<br>Beijing University of Posts and Telecommunications</p>
+        <p>PhD candidate in Information and Communication Engineering<br>Beijing University of Posts and Telecommunications</p>
         <p>Visiting Researcher <br>Univerisy College London</p>
     <h3><a href="https://jiaqizou417.github.io/">Home</a></h3>
         <h3><a href="https://jiaqizou417.github.io/research.html">Research</a></h3>
@@ -91,28 +91,31 @@
         <!-- <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3>  -->
         <h3><a href="https://jiaqizou417.github.io/teaching.html">Teaching</a></h3> 
         <h3><a href="https://jiaqizou417.github.io/personal.html">Personal</a></h3>
-    <b>Social</b><br>
+    <!-- <b>Email</b><br> -->
         <div class="social-row">
-          <a href="jqzou@bupt.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <p>jqzou@bupt.edu.cn</p>
-          <p>uceejzo@ucl.ac.uk</p>
+          <!-- <a href="jqzou@bupt.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a> -->
+          <!-- <p>jqzou@bupt.edu.cn</p> -->
+          <!-- <p>uceejzo@ucl.ac.uk</p> -->
           <!-- <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br> -->
           <!-- <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br> -->
           <!-- <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br> -->
           <!-- <a href="http://github.com/tyleransom"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br> -->
           <!-- <a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br> -->
           <!-- <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br> -->
-          <br>
-        </div>
-        <br>
+          <!-- <br> -->
+        <!-- </div> -->
+        <!-- <br> -->
 
-    <p><b>Contact:</b><br>School of Information and Communication Engineering<br>Beijing University of Posts and Telecommunications<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
+    <p><b>Contact:</b>
+      <a href="jqzou@bupt.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a>
+          <!-- <p>jqzou@bupt.edu.cn</p> -->
+      <br>jqzou@bupt.edu.cn<br><br>Box 194, Xitucheng Road 10<br>Haidian District, 100876<br>Beijing University of Posts and Telecommunications</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="jiaqi.jpg" height="250" width="250" alt="Jiaqi Zou"></h3>
-      <p>I am currently an phD of <a href="http://www.ou.edu/cas/economics">Information and Communication Engineering</a> at the <a href="http://www.ou.edu/">Beijing University of Posts and Telecommunications</a> and Visiting Researcher at the <a href="https://www.iza.org/">Univerisy College London</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
-      <p>My research interests include wireless communications, integrated sensing and communications and applications of machine learning.</p>
+      <img src="jiaqi.jpeg" height="250" width="250" alt="Jiaqi Zou"></h3>
+      <p>I am currently a PhD candidate of <a>Information and Communication Engineering</a> at the <a>Beijing University of Posts and Telecommunications</a> and a visiting researcher at the <a>Univerisy College London</a>. I received the B.E. degree in <a>Communication Engineering</a> from <a>Beijing University of Posts and Telecommunications</a> in June 2020.</p>
+      <p>My research interests include wireless communications, integrated sensing and communications, and applications of machine learning.</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
