--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
       </header>
       <section>
       <img src="jiaqi.jpeg" height="250" width="250" alt="Jiaqi Zou"></h3>
-      <p>I am currently a PhD candidate of <a>Information and Communication Engineering</a> at the <a>Beijing University of Posts and Telecommunications</a> and a visiting researcher at the <a>Univerisy College London</a>. I received the B.E. degree in <a>Communication Engineering</a> from <a>Beijing University of Posts and Telecommunications</a> in June 2020.</p>
+      <p>I am currently a PhD candidate of Information and Communication Engineering at the <a>Beijing University of Posts and Telecommunications</a>, supervised by Prof. Songlin Sun and a visiting researcher at the Dept. EEE <a>Univerisy College London</a>, supervised by <a href="https://sites.google.com/view/christos-masouros/home">Prof. Christos Masouros</a>. I received the B.E. degree in Communication Engineering from Beijing University of Posts and Telecommunications in June 2020.</p>
+      <p>I won the Best Paper Award from IEEE VCIP 2020. I served as a TPC member of WCNC 2022 and 2023 ICC workshop.</p>
       <p>My research interests include wireless communications, integrated sensing and communications, and applications of machine learning.</p>
       </section>
     </div>
