--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
       <section>
       <img src="jiaqi.jpeg" height="250" width="250" alt="Jiaqi Zou"></h3>
       <p>I am currently a PhD candidate of Information and Communication Engineering at the <a>Beijing University of Posts and Telecommunications</a>, supervised by Prof. Songlin Sun and a visiting researcher at the Dept. EEE <a>Univerisy College London</a>, supervised by <a href="https://sites.google.com/view/christos-masouros/home">Prof. Christos Masouros</a>. I received the B.E. degree in Communication Engineering from Beijing University of Posts and Telecommunications in June 2020.</p>
-      <p>I won the Best Paper Award from IEEE VCIP 2020. I served as a TPC member of WCNC 2022 and 2023 ICC workshop.</p>
-      <p>My research interests include wireless communications, integrated sensing and communications, and applications of machine learning.</p>
+      <p>I won the Best Paper Award from IEEE VCIP 2020. I served as a TPC member of WCNC 2022 and ICC 2023.</p>
+      <p>My research interests include wireless communications, integrated sensing and communications, applications of machine learning and multimedia.</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
