--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
         <p>PhD candidate in Information and Communication Engineering<br>Beijing University of Posts and Telecommunications</p>
         <p>Visiting Researcher <br>Univerisy College London</p>
     <h3><a href="https://jiaqizou417.github.io/">Home</a></h3>
-        <h3><a href="https://jiaqizou417.github.io/research.html">Research</a></h3>
-    <h3><a href="https://jiaqizou417.github.io/research/CV.pdf">CV</a></h3>  
-        <!-- <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3>  -->
-        <h3><a href="https://jiaqizou417.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://jiaqizou417.github.io/personal.html">Personal</a></h3>
-    <!-- <b>Email</b><br> -->
+        <!-- <h3><a href="https://jiaqizou417.github.io/research.html">Research</a></h3> -->
+        <!-- <h3><a href="https://jiaqizou417.github.io/teaching.html">Teaching</a></h3>  -->
+        <!-- <h3><a href="https://jiaqizou417.github.io/personal.html">Personal</a></h3> -->
+        <!-- <h3><a href="https://jiaqizou417.github.io/research/CV.pdf">CV</a></h3>   -->
+
+        <!-- <b>Email</b><br> -->
         <div class="social-row">
           <!-- <a href="jqzou@bupt.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a> -->
           <!-- <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br> -->
@@ -109,7 +109,9 @@
       </header>
       <section>
       <img src="jiaqi.jpeg" height="250" width="250" alt="Jiaqi Zou"></h3>
-      <p>I am currently a PhD candidate of Information and Communication Engineering at the <a>Beijing University of Posts and Telecommunications</a>, supervised by Prof. Songlin Sun and a visiting researcher at the Dept. EEE <a>Univerisy College London</a>, supervised by <a href="https://sites.google.com/view/christos-masouros/home">Prof. Christos Masouros</a>. I received the B.E. degree in Communication Engineering from Beijing University of Posts and Telecommunications in June 2020.</p>
+      <p>I am currently a PhD candidate of Information and Communication Engineering at the <a>Beijing University of Posts and Telecommunications</a>, supervised by Prof. Songlin Sun and a visiting researcher at the Dept. EEE <a>Univerisy College London</a>, supervised by <a href="https://sites.google.com/view/christos-masouros/home">Prof. Christos Masouros</a>. 
+        <br>I received the B.E. degree in Communication Engineering from Beijing University of Posts and Telecommunications in June 2020 and won the Beijing Outstanding Graduate Award, 2020 (highest honor for graduate set by the government of
+        Beijing).<br></p>
       <p>I won the Best Paper Award from IEEE VCIP 2020. I served as a TPC member of WCNC 2022 and ICC 2023.</p>
       <p>My research interests include wireless communications, integrated sensing and communications, applications of machine learning and multimedia.</p>
       </section>
