--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <!-- <h3><a href="https://jiaqizou417.github.io/research.html">Research</a></h3> -->
         <!-- <h3><a href="https://jiaqizou417.github.io/teaching.html">Teaching</a></h3>  -->
         <!-- <h3><a href="https://jiaqizou417.github.io/personal.html">Personal</a></h3> -->
-        <h3><a href="https://jiaqizou417.github.io/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://jiaqizou417.github.io/research/JIAQI_ZOU_CV.pdf">CV</a></h3>  
 
         <!-- <b>Email</b><br> -->
         <div class="social-row">
