--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <p>PhD candidate in Information and Communication Engineering<br>Beijing University of Posts and Telecommunications</p>
         <p>Visiting Researcher <br>University College London</p>
     <h3><a href="https://jiaqizou417.github.io/">Home</a></h3>
-        <!-- <h3><a href="https://jiaqizou417.github.io/research.html">Research</a></h3> -->
-        <!-- <h3><a href="https://jiaqizou417.github.io/teaching.html">Teaching</a></h3>  -->
+        <h3><a href="https://jiaqizou417.github.io/research.html">Research</a></h3>
+        <h3><a href="https://jiaqizou417.github.io/teaching.html">Teaching</a></h3> 
         <!-- <h3><a href="https://jiaqizou417.github.io/personal.html">Personal</a></h3> -->
         <h3><a href="https://jiaqizou417.github.io/research/JIAQI_ZOU_CV.pdf">CV</a></h3>  
 
