--- a/teaching.html
+++ b/teaching.html
@@ -88,9 +88,9 @@
       <p>Visiting Researcher <br>University College London</p>
   <h3><a href="https://jiaqizou417.github.io/">Home</a></h3>
       <h3><a href="https://jiaqizou417.github.io/research.html">Research</a></h3>
-  <h3><a href="https://jiaqizou417.github.io/research/CV.pdf">CV</a></h3>  
-      <!-- <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3>  -->
       <h3><a href="https://jiaqizou417.github.io/teaching.html">Teaching</a></h3> 
+      <h3><a href="https://jiaqizou417.github.io/research/JIAQI_ZOU_CV.pdf">CV</a></h3>  
+      <!-- <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3>  -->
       <!-- <h3><a href="https://jiaqizou417.github.io/personal.html">Personal</a></h3> -->
   <!-- <b>Email</b><br> -->
       <div class="social-row">
