--- a/research.html
+++ b/research.html
@@ -90,7 +90,7 @@
         <!-- <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3>  -->
         <h3><a href="https://jiaqizou417.github.io/teaching.html">Teaching</a></h3> 
         <h3><a href="https://jiaqizou417.github.io/research/JIAQI_ZOU_CV.pdf">CV</a></h3>  
-        <!-- <h3><a href="https://jiaqizou417.github.io/personal.html">Personal</a></h3> -->
+        <h3><a href="https://jiaqizou417.github.io/personal.html">Personal</a></h3>
     <!-- <b>Email</b><br> -->
         <div class="social-row">
           <!-- <a href="jqzou@bupt.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a> -->
@@ -258,10 +258,16 @@ doi = {10.3368/jhr.0421-11641R1}
 
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Works in Progress</h2>
 
+    <p style="margin:0"> <b>Energy Efficient Waveform Design for Joint Communications and Sensing Systems</b> <br> with Christos Masouros. <br><button class="accordion">
+      Abstract
+    </button>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Joint communication and sensing (JC\&S) is considered an essential technology for future wireless networks in response to emerging network applications that demand the existence of both functionalities in the network. In this paper, we investigate energy-efficient beamforming design, where the transmitted waveform is jointly designed for multi-user communication and target estimation at the same time. We maximize the energy efficiency (EE) of the emitted dual-functional waveform, under a power budget, a signal-to-interference-and-noise ratio (SINR) and a Cram\'{e}r-Rao bound (CRB) constraint.  We first consider the communication-centric EE maximization, in two scenarios: one for sensing a point-like target and one for an extended target, respectively. However, the considered optimization problems are highly non-convex due to their fractional form. To address this problem, we propose a quadratic-transform-Dinkelbach method to solve the noncovexity of the objective function, and then, solve the sub-problem by leveraging Schur complement condition and semi-definite relaxation (SDR) techniques. To further measure the sensing-centric EE, we propose a novel performance metric for sensing-centric EE, and optimize the metric in the scenario of sensing the point-like target and the extended target.In the case of sensing a point-like target, we explore a sequential convex approximation (SCA) method to calculate the results effectively. We give the first-order approximations for the non-convex formulations and develop an effective iterative optimization algorithm to solve the transformed convex problem. The problem under the extended target is addressed by using Dinkelbach's transform. Based on the metrics above, we investigate the trade-off between communication-centric EE and sensing-centric EE. Numerical results demonstrate significant gains in EE compared with the benchmark and the trade-off between the two EE metrics. </p></div><br>
+
     <p style="margin:0"> <b>Sensing Security in Integrated Sensing and Communication Systems</b> <br> with Christos Masouros. <br><button class="accordion">
       Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> Coming Soon. </p></div><br>
+
 
     
       </section>
