--- a/teaching.html
+++ b/teaching.html
@@ -91,7 +91,7 @@
       <h3><a href="https://jiaqizou417.github.io/teaching.html">Teaching</a></h3> 
       <h3><a href="https://jiaqizou417.github.io/research/JIAQI_ZOU_CV.pdf">CV</a></h3>  
       <!-- <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3>  -->
-      <!-- <h3><a href="https://jiaqizou417.github.io/personal.html">Personal</a></h3> -->
+      <h3><a href="https://jiaqizou417.github.io/personal.html">Personal</a></h3>
   <!-- <b>Email</b><br> -->
       <div class="social-row">
         <!-- <a href="jqzou@bupt.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a> -->
