--- a/research.html
+++ b/research.html
@@ -244,7 +244,7 @@
 <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conference Papers</h2>
 
 
-<p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2307.04002">Energy Efficiency Optimization for Integrated Sensing and Communications Systems
+<p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2307.04002">Sensing-Centric Energy-Efficient Waveform Design for Integrated Sensing and Communications
 </a> 
        <br> <i>Accepted by 2023 IEEE Global Communications Conference (GLOBECOM)</i>. 
        <!-- <br> <i>IEEE Transactions on Green Communications and Networking</i>.  -->
@@ -297,7 +297,7 @@
 <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://doi.org/10.1109/VCIP49819.2020.9301780">Multi-Scale Video Inverse Tone Mapping with Deformable Alignment
 </a> 
        <br> <i>2020 IEEE International Conference on Visual Communications and Image Processing (VCIP)</i>. 
-       <br> <b><font color="#FF0000">Best Paper Award</font></b>. 
+       <br> <b>Best Paper Award</b>. 
        <br> <button class="accordion"> 
     Abstract   
     </button>   
