--- a/personal.html
+++ b/personal.html
@@ -124,7 +124,9 @@
         <li>First Prize (Meritorious Winner) of the International Mathematical Contest in modeling, 2018</li>
         <li>"Jingji Shijie" Enterprise Scholarship, 2017 (Top 1.5% of 571 students)</li>
         <li>Outstanding Volunteer for 2022 Beijing Winter Olympics; 
-        <li>Second Place of Beijing Universities Swimming Championship</li>
+        <li>Second Place of Beijing Universities Swimming Championship 🏊
+          <li>Fifth Place of Beijing Universities Track and Field Championship 🏃🏻‍♀️
+        </li>
       </ul>
 
       <h3>Additional Information</h3>
