--- a/research.html
+++ b/research.html
@@ -147,7 +147,7 @@
 
 
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2307.04002">Energy-Efficient Beamforming Design for Integrated Sensing and Communications Systems</a> 
-      <br> <i>Submitted to IEEE Transactions on Communications</i>. 
+      <br> <i>Submitted to IEEE Transactions on Communications (Major Revision)</i>. 
       <!-- <br> <i>Submitted to IEEE Transactions on Communications</i>.  -->
       <br> <button class="accordion"> 
    Abstract   
@@ -167,6 +167,22 @@
       archivePrefix={arXiv},
       primaryClass={eess.SP}
       }
+</code> </pre> </p></div>
+<br>
+<p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://arxiv.org/abs/2307.04002">Online Learning-Induced Port Selection for Fluid Antenna in Dynamic Channel Environment</a> 
+  <br> <i>Submitted to IEEE Wireless Communication Letters (Accepted with Minor Revision)</i>. 
+  <!-- <br> <i>Submitted to IEEE Transactions on Communications</i>.  -->
+  <br> <button class="accordion"> 
+Abstract   
+</button>   
+<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> 
+  Port selection is one of the key challenges in the operation of fluid antenna systems. In this paper, we propose a novel online learning framework to address the port selection issue without the instantaneous full CSI in time-varying channel conditions.  Based on bandit learning, the proposed approach learns the optimal port selection by dynamically interacting with the varying channels. The proposed algorithm is proven to achieve guaranteed performance with a bounded deviation and simulation results confirm the performance by comparing its performance with random and optimal selections.
+</p></div>
+<p style="margin:0"><button class="accordion">
+ BibTeX citation
+</button>
+<div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <pre> <code>
+@coming soon
 </code> </pre> </p></div>
 <br>
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://doi.org/10.1109/TGCN.2023.3234721">Vision-Assisted 3-D Predictive Beamforming for Green UAV-to-Vehicle Communications</a> 
@@ -252,7 +268,7 @@
     Abstract   
     </button>   
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> 
-      In this paper, we consider the energy-efficient wave- form design for integrated sensing and communications sys- tems, simultaneously performing multi-user communications and point-like/extended target sensing. We propose a performance metric to measure sensing-centric EE for the first time, namely sensing-centric EE. We formulate a problem to optimize sensing- centric EE with power budget, signal-to-interference-and-noise ratio (SINR) constraints for communication and a Crame ́r-Rao bound (CRB) constraint for sensing. For the point-like target case, we give the first-order approximations for the non-convex formulations and develop an effective iterative algorithm to handle the nonconvexity. For the extended target case, we show that the considered problem can be relaxed into semidefinite programming and the optimum can be reconstructed. Simulation results demonstrate significant performance gains on sensing- centric EE over the benchmarks.
+      In this paper, we consider the energy-efficient wave- form design for integrated sensing and communications systems, simultaneously performing multi-user communications and point-like/extended target sensing. We propose a performance metric to measure sensing-centric EE for the first time, namely sensing-centric EE. We formulate a problem to optimize sensing- centric EE with power budget, signal-to-interference-and-noise ratio (SINR) constraints for communication and a Crame ́r-Rao bound (CRB) constraint for sensing. For the point-like target case, we give the first-order approximations for the non-convex formulations and develop an effective iterative algorithm to handle the nonconvexity. For the extended target case, we show that the considered problem can be relaxed into semidefinite programming and the optimum can be reconstructed. Simulation results demonstrate significant performance gains on sensing- centric EE over the benchmarks.
     </p></div>
     <p style="margin:0"><button class="accordion">
       BibTeX citation
